--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 body {
     height: 100vh;
     width: 100%;
-    background: linear-gradient(-120deg,rgba(0, 0, 0, 0.991), rgba(0, 0, 0, 0.068)), url(img/hero.jpg);
+    background: linear-gradient(-120deg,rgba(0, 0, 0, 0.991), rgba(0, 0, 0, 0.068)), url(img/hero.png);
     background-position: center;
     background-size: cover;
 }
